--- a/ROLES/michael.apacheinstall/templates/httpd.j2
+++ b/ROLES/michael.apacheinstall/templates/httpd.j2
@@ -1,5 +1,5 @@
 #
-# This is the main Apache HTTP server configuration file.  It contains the
+# This is the Michael's Template Apache HTTP server configuration file.  It contains the
 # configuration directives that give the server its instructions.
 # See <URL:http://httpd.apache.org/docs/2.4/> for detailed information.
 # In particular, see 
